--- a/snippets/render-inline-media.liquid
+++ b/snippets/render-inline-media.liquid
@@ -36,6 +36,8 @@
           # Default values
           assign layout = 'full'
           assign caption = ''
+          assign scale = '100'
+          assign caption_index = 2
           
           # Parse layout and caption if provided
           if parts.size > 1
@@ -48,14 +50,41 @@
           endif
           
           if parts.size > 2
-            assign caption = parts[2] | strip
+            assign potential_scale = parts[2] | strip
+            assign scale_candidate = potential_scale | remove: '%' | strip
+            assign scale_test = scale_candidate
+            assign scale_test = scale_test | remove: '0' | remove: '1' | remove: '2' | remove: '3' | remove: '4' | remove: '5' | remove: '6' | remove: '7' | remove: '8' | remove: '9'
+            assign scale_test = scale_test | remove: '.' | remove: '-'
+            if scale_candidate != '' and scale_test == ''
+              assign scale = scale_candidate
+              assign caption_index = 3
+            else
+              assign caption = potential_scale
+            endif
+          endif
+          
+          if caption == '' and parts.size > caption_index
+            assign caption = parts[caption_index] | strip
+          endif
+          
+          assign scale_clean = scale | remove: '%' | strip
+          if scale_clean == ''
+            assign scale_clean = '100'
+          endif
+          assign scale_number = scale_clean | plus: 0
+          if scale_number <= 0
+            assign scale_number = 100
+          endif
+          assign scale_ratio = scale_number
+          if scale_number > 3
+            assign scale_ratio = scale_number | times: 0.01
           endif
           
           assign original_shortcode = '[[image:' | append: url_and_options | append: ']]'
         -%}
         
         {%- capture image_html -%}
-          <figure class="inline-media inline-media--image inline-media--{{ layout }}">
+          <figure class="inline-media inline-media--image inline-media--{{ layout }}" style="--inline-media-scale: {{ scale_ratio }};">
             <img
               src="{{ image_url }}"
               alt="{{ caption | default: article.title }}"
