--- a/blocks/_blog-post-card.liquid
+++ b/blocks/_blog-post-card.liquid
@@ -48,7 +48,7 @@
     <div class="hover-bar">
       <div class="hover-bar__header">
         <span class="hover-bar__title">{{ title }}</span>
-        <span class="hover-bar__icon">+</span>
+        <span class="hover-bar__icon"></span>
       </div>
       <div class="hover-bar__body">
         <div class="hover-bar__desc">{{ description }}</div>
@@ -242,15 +242,15 @@
   }
 
   .hover-bar__header {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
     padding: 2rem 2.5rem;
   }
 
   .hover-bar__title {
-    flex: 1;
+    width: 100%;
     font-size: 2rem;
     font-weight: 700;
     line-height: 1.2;
@@ -268,11 +268,39 @@
   }
 
   .hover-bar__icon {
-    font-weight: 400;
-    font-size: 2.5rem;
-    line-height: 1;
+    position: absolute;
+    right: 2.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    flex-shrink: 0;
+  }
+
+  .hover-bar__icon::before,
+  .hover-bar__icon::after {
+    content: '';
+    position: absolute;
+    background-color: #000;
+  }
+
+  .hover-bar__icon::before {
+    width: 1.2rem;
+    height: 3px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .hover-bar__icon::after {
+    width: 3px;
+    height: 1.2rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .hover-bar__body {
@@ -315,7 +343,7 @@
   }
 
   .blog-post-item.featured-article .blog-post-card__hover:hover .hover-bar__icon {
-    transform: rotate(45deg);
+    transform: translateY(-50%) rotate(45deg);
   }
 
   .blog-post-item.featured-article .blog-post-card__hover:hover .hover-bar__body {
